# ComfyUI-PromptDeck

./: .gitignore  LICENSE  README.md  WINDOWS_SETUP.md  __init__.py  prompt_deck.py  pyproject.toml
.github/workflows/: publish.yml
web/js/: prompt_deck.js
