[project]
name = "comfyui-promptdeck"
description = "Prompt feeder that shows you the list: running-line highlight, click-to-jump, hold, ratings, per-line disable, and text surgery. No line limits, no dependencies."
version = "1.3.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/omervaner/ComfyUI-PromptDeck"

[tool.comfy]
PublisherId = "vaner"
DisplayName = "Prompt Deck"
Icon = ""
